tests/NormalTests/paczka1/fuzzy1/83547563.err
Error in line 12: heEgiPu S323 53,0
Error in line 28: W8G S323 1,3
Error in line 20: tQN7AubYd A531 48,8
